--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "scripts": {
     "dev": "nodemon dist/index.js",
-    "dockbuild": "sudo docker build -t hubnode:latest .",
+    "dockbuild": "sudo docker build -t autodeploy:latest .",
     "dockcompbuild": "sudo docker-compose -f docker-compose-dev.yml build",
     "dockbuildall": "npm run dockbuild && npm run dockcompbuild",
-    "dockbash": "sudo docker run -it hubnode:latest /bin/bash",
-    "dockrun": "sudo docker run -it hubnode:latest",
+    "dockbash": "sudo docker run -it autodeploy:latest /bin/bash",
+    "dockrun": "sudo docker run -it autodeploy:latest",
     "startdev": "sudo docker-compose -f docker-compose-dev.yml up",
     "stopdev": "sudo docker-compose -f docker-compose-dev.yml stop",
     "test": "mocha -r ts-node/register src/**/*.spec.ts",
